--- a/fitness_friends/flask_app/templates/edit.html
+++ b/fitness_friends/flask_app/templates/edit.html
@@ -12,8 +12,8 @@
     <div class="container p-3 mb-2 bg-secondary text-white d-flex justify-content-evenly">
     <h1>Update Workout Journal Entry</h1>
     
-    <a href="/workouts/dashboard">Back Everbody's Workouts</a> | 
-    <a href="/logout">Logout</a>
+    <a href="/workouts/dashboard"><button  class="btn btn-dark">Back to Workouts</button></a> | 
+    <a href="/logout"><button  class="btn btn-dark">Logout</button></a>
     </div>
 
     
