--- a/fitness_friends/flask_app/templates/dashboard.html
+++ b/fitness_friends/flask_app/templates/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container p-3 mb-2 bg-secondary text-white d-flex justify-content-evenly gap-5">
-    <h1>Everbody's Workouts</h1>
+    <h1>Everybody's Workouts</h1>
     <h2>Welcome {{one_user.first_name}}</h2>
     <a href="/workout/new"><button  class="btn btn-dark">New Journal Entry</button></a> 
     | 
