--- a/fitness_friends/flask_app/templates/log_reg.html
+++ b/fitness_friends/flask_app/templates/log_reg.html
@@ -13,7 +13,7 @@
         <h1 class="bg-secondary text-white ">Fitness Friends</h1>
     </div>
     <div>
-        <div class="container p-3 mb-2 bg-secondary text-white col-auto d-flex p-2">
+        <div class="container p-3 mb-2 bg-secondary text-white col-auto d-flex p-2 gap-5">
             <h2>Register</h2>
 
             {% with messages = get_flashed_messages(category_filter=['register']) %}
@@ -71,7 +71,7 @@
             </form>
         </div>
 
-        <div class="container p-3 mb-2 bg-secondary text-white col-auto d-flex p-2">
+        <div class="container p-3 mb-2 bg-secondary text-white col-auto d-flex p-2 gap-5">
             <h2>Login</h2>
 
             {% with messages = get_flashed_messages(category_filter=['login']) %}
