--- a/fitness_friends/flask_app/templates/log_reg.html
+++ b/fitness_friends/flask_app/templates/log_reg.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container p-3 mb-2 bg-secondary text-white d-flex flex-wrap justify-content-evenly">
+    <div class="p-3 mb-2 bg-secondary text-white d-flex flex-wrap justify-content-evenly">
         <h1 class="bg-secondary text-white ">Fitness Friends</h1>
     </div>
     <div>
