--- a/fitness_friends/flask_app/templates/edit.html
+++ b/fitness_friends/flask_app/templates/edit.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container p-3 mb-2 bg-secondary text-white d-flex justify-content-evenly">
+    <div class="p-3 mb-2 bg-secondary text-white d-flex justify-content-evenly">
     <h1>Update Workout Journal Entry</h1>
     
     <a href="/workouts/dashboard"><button  class="btn btn-dark">Back to Workouts</button></a> | 
